# starsight

./: .clippy.toml  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  tarpaulin-report.html  tarpaulin-report.md
examples/: Cargo.toml  README.md  bar_chart.rs  custom_colormap.rs  heatmap.rs  histogram.rs  line_chart.rs
examples/basics/: bar_chart.rs  bubble_scatter.rs  heatmap.rs  histogram.rs  line_chart.rs  movie_heatmap.rs  quickstart.rs  scatter.rs
examples/composition/: box_plot.rs  distribution_dashboard.rs  donut.rs  donut_sunburst.rs  energy_transition.rs  gallery.rs  pie.rs  recipe.rs  rug_with_histogram.rs  statistical.rs  violin.rs  violin_raincloud.rs  waterfall_bar.rs
examples/data/: polars_integration.rs
examples/planned/: faceting.rs  interactive.rs  polars_integration.rs  streaming.rs  surface3d.rs  terminal.rs
examples/scientific/: bollinger_candlestick.rs  candlestick.rs  contour_fields.rs  error_bars.rs  gauge.rs  kruskal_szekeres_line.rs  laser_plasma.rs  lorenz_line.rs  nightingale.rs  polar_calendar.rs  radar_spider.rs  reciprocal_space.rs  wind_rose.rs
examples/showcases/: bar_chart.rs  custom_colormap.rs  custom_theme.rs  faceting.rs  gallery.rs  heatmap.rs  histogram.rs  interactive.rs  kruskal_szekeres_line.rs  line_chart.rs  lorenz_line.rs  polars_integration.rs  quickstart.rs  recipe.rs  scatter.rs  statistical.rs  streaming.rs  surface3d.rs  terminal.rs  waterfall_bar.rs
examples/theming/: custom_colormap.rs  custom_theme.rs
starsight/: Cargo.toml
starsight-core/: Cargo.toml
starsight-core/src/: error.rs  geom.rs  lib.rs  scene.rs  style.rs
starsight-core/src/axis/: mod.rs
starsight-core/src/backend/: mod.rs  svg.rs
starsight-core/src/color/: mod.rs
starsight-core/src/coord/: mod.rs
starsight-core/src/scale/: mod.rs
starsight-core/src/text/: mod.rs
starsight-derive/: Cargo.toml
starsight-export/: Cargo.toml
starsight-export/src/: lib.rs
starsight-figure/: Cargo.toml
starsight-figure/src/: lib.rs
starsight-figure/src/data/: mod.rs
starsight-gpu/: Cargo.toml
starsight-gpu/src/: lib.rs
starsight-interact/: Cargo.toml
starsight-interact/src/: lib.rs
starsight-layer-1/: Cargo.toml
starsight-layer-1/src/: colormap.rs  error.rs  errors.rs  lib.rs  paths.rs  primitives.rs  scenes.rs  theme.rs
starsight-layer-1/src/backend/: mod.rs  skia.rs  svg.rs
starsight-layer-1/src/backends/: gpus.rs  mod.rs  prints.rs  rasters.rs  terminals.rs  vectors.rs
starsight-layer-1/src/primitives/: color.rs  geom.rs  mod.rs
starsight-layer-1/tests/: snapshot.rs  snapshot_basic.rs
starsight-layer-1/tests/snapshots/: snapshot__blue_rect_on_white.snap  snapshot__svg_blue_rect.snap
starsight-layer-2/: Cargo.toml
starsight-layer-2/src/: axes.rs  axis.rs  coord.rs  coords.rs  lib.rs  scale.rs  scales.rs  tick.rs  ticks.rs
starsight-layer-3/: Cargo.toml
starsight-layer-3/src/: aesthetics.rs  lib.rs  mark.rs  marks.rs  positions.rs  statistics.rs
starsight-layer-3/src/marks/: arc.rs  bar_polar.rs  box_plot.rs  candlestick.rs  contour.rs  errorbar.rs  extent.rs  palette.rs  pie.rs  radar.rs  rect_polar.rs  rug.rs  violin.rs
starsight-layer-3/tests/: snapshot.rs  snapshot_marks.rs
starsight-layer-3/tests/snapshots/: snapshot__snapshot_line_basic.snap  snapshot__snapshot_line_nan_gaps.snap  snapshot__snapshot_scatter_sizes.snap
starsight-layer-4/: Cargo.toml
starsight-layer-4/src/: colorbars.rs  facets.rs  layouts.rs  legends.rs  lib.rs
starsight-layer-5/: Cargo.toml
starsight-layer-5/src/: colorbar.rs  figure.rs  figures.rs  inferences.rs  layout.rs  lib.rs  render.rs  renders.rs  sources.rs
starsight-layer-5/tests/: snapshot.rs
starsight-layer-5/tests/snapshots/: snapshot__snapshot_arcmark_full_nightingale.snap  snapshot__snapshot_arcmark_nested_sunburst.snap  snapshot__snapshot_arcmark_partial_gauge.snap  snapshot__snapshot_area_basic.snap  snapshot__snapshot_area_nan_gaps.snap  snapshot__snapshot_area_with_baseline-2.snap.new  snapshot__snapshot_area_with_baseline.snap  snapshot__snapshot_area_with_baseline.snap.new  snapshot__snapshot_bar_grouped.snap  snapshot__snapshot_bar_horizontal.snap  snapshot__snapshot_bar_stacked.snap  snapshot__snapshot_bar_vertical.snap  snapshot__snapshot_bar_waterfall.snap  snapshot__snapshot_boxplot_basic.snap  snapshot__snapshot_boxplot_palette.snap  snapshot__snapshot_boxplot_with_outliers.snap  snapshot__snapshot_candlestick_basic.snap  snapshot__snapshot_candlestick_custom_colors.snap  snapshot__snapshot_contour_combined.snap  snapshot__snapshot_contour_filled.snap  snapshot__snapshot_contour_isolines.snap  snapshot__snapshot_donut_basic.snap  snapshot__snapshot_errorbar_asymmetric.snap  snapshot__snapshot_errorbar_horizontal.snap  snapshot__snapshot_errorbar_vertical.snap  snapshot__snapshot_heatmap_basic.snap  snapshot__snapshot_heatmap_log.snap  snapshot__snapshot_heatmap_plasma.snap  snapshot__snapshot_heatmap_viridis.snap  snapshot__snapshot_histogram_basic.snap  snapshot__snapshot_legend_dodge_diagonal.snap  snapshot__snapshot_legend_dodge_full_range.snap  snapshot__snapshot_legend_glyph_dispatch.snap  snapshot__snapshot_legend_outside_right.snap  (+32 more)
starsight-layer-6/: Cargo.toml
starsight-layer-6/src/: hovers.rs  lib.rs  pans.rs  selections.rs  streams.rs  windows.rs  zooms.rs
starsight-layer-7/: Cargo.toml
starsight-layer-7/src/: animations.rs  exports.rs  gifs.rs  lib.rs  prints.rs  terminals.rs  webs.rs
starsight-layout/: Cargo.toml
starsight-layout/src/: lib.rs
starsight-marks/: Cargo.toml
starsight-marks/src/: lib.rs  position.rs
starsight/src/: aesthetics.rs  axes.rs  backends.rs  colormap.rs  coords.rs  exports.rs  figures.rs  inferences.rs  layouts.rs  legends.rs  lib.rs  marks.rs  paths.rs  prelude.rs  primitives.rs  renders.rs  scales.rs  sources.rs  statistics.rs  theme.rs  ticks.rs
starsight/tests/: integration.rs
xtask/: Cargo.toml
xtask/src/: benches.rs  gallery.rs  main.rs  showcase.rs  snapshots.rs  svgs.rs
(+103 files in other folders)
