[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dev-dependencies]
starsight.workspace = true
prismatica = { version = "1.0.0", features = ["matplotlib"] }
starsight-layer-3.workspace = true

[[example]]
name = "lorenz_line"
path = "showcases/lorenz_line.rs"

[[example]]
name = "kruskal_szekeres_line"
path = "showcases/kruskal_szekeres_line.rs"

[[example]]
name = "waterfall_bar"
path = "showcases/waterfall_bar.rs"

[[example]]
name = "bar_chart"
path = "showcases/bar_chart.rs"

[[example]]
name = "line_chart"
path = "showcases/line_chart.rs"

[[example]]
name = "scatter"
path = "showcases/scatter.rs"

[[example]]
name = "heatmap"
path = "showcases/heatmap.rs"

[[example]]
name = "histogram"
path = "showcases/histogram.rs"

[[example]]
name = "custom_theme"
path = "showcases/custom_theme.rs"

[[example]]
name = "custom_colormap"
path = "showcases/custom_colormap.rs"

[[example]]
name = "quickstart"
path = "showcases/quickstart.rs"

[[example]]
name = "statistical"
path = "showcases/statistical.rs"

[[example]]
name = "recipe"
path = "showcases/recipe.rs"

[[example]]
name = "gallery"
path = "showcases/gallery.rs"

[lints]
workspace = true

