[package]
name = "examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
starsight.workspace = true
chromata.workspace = true
prismatica = { workspace = true, features = ["matplotlib", "colorbrewer"] }
polars = { workspace = true, optional = true }

[features]
polars = ["dep:polars", "starsight/polars"]

# ── basics ──────────────────────────────────────────────────────────────────
# Smallest possible programs that exercise one mark type at a time. Start here
# if you've never used starsight before; everything else builds on these.

[[example]]
name = "quickstart"
path = "basics/quickstart.rs"

[[example]]
name = "line_chart"
path = "basics/line_chart.rs"

[[example]]
name = "scatter"
path = "basics/scatter.rs"

[[example]]
name = "bar_chart"
path = "basics/bar_chart.rs"

[[example]]
name = "heatmap"
path = "basics/heatmap.rs"

[[example]]
name = "histogram"
path = "basics/histogram.rs"

[[example]]
name = "bubble_scatter"
path = "basics/bubble_scatter.rs"

[[example]]
name = "movie_heatmap"
path = "basics/movie_heatmap.rs"

# ── theming ─────────────────────────────────────────────────────────────────
# Same data as the basics, recoloured: shows how to swap a Theme or a
# colormap without changing the rest of the figure builder chain.

[[example]]
name = "custom_theme"
path = "theming/custom_theme.rs"

[[example]]
name = "custom_colormap"
path = "theming/custom_colormap.rs"

# ── composition ─────────────────────────────────────────────────────────────
# Multiple marks in the same Figure: layered overlays, polished references,
# and per-bar customisation. The auto-derived legend lives here.

[[example]]
name = "statistical"
path = "composition/statistical.rs"

[[example]]
name = "recipe"
path = "composition/recipe.rs"

[[example]]
name = "gallery"
path = "composition/gallery.rs"

[[example]]
name = "waterfall_bar"
path = "composition/waterfall_bar.rs"

[[example]]
name = "box_plot"
path = "composition/box_plot.rs"

[[example]]
name = "violin"
path = "composition/violin.rs"

[[example]]
name = "pie"
path = "composition/pie.rs"

[[example]]
name = "donut"
path = "composition/donut.rs"

[[example]]
name = "donut_sunburst"
path = "composition/donut_sunburst.rs"

[[example]]
name = "rug_with_histogram"
path = "composition/rug_with_histogram.rs"

# ── scientific ──────────────────────────────────────────────────────────────
# Real numerical experiments: integrate an ODE, render a relativity diagram.
# These exist to prove the library handles real data, not just toy series.

[[example]]
name = "candlestick"
path = "scientific/candlestick.rs"

[[example]]
name = "lorenz_line"
path = "scientific/lorenz_line.rs"

[[example]]
name = "kruskal_szekeres_line"
path = "scientific/kruskal_szekeres_line.rs"

[[example]]
name = "laser_plasma"
path = "scientific/laser_plasma.rs"

[[example]]
name = "nightingale"
path = "scientific/nightingale.rs"

[[example]]
name = "gauge"
path = "scientific/gauge.rs"

[[example]]
name = "contour_fields"
path = "scientific/contour_fields.rs"

[[example]]
name = "bollinger_candlestick"
path = "scientific/bollinger_candlestick.rs"

[[example]]
name = "radar_spider"
path = "scientific/radar_spider.rs"

[[example]]
name = "wind_rose"
path = "scientific/wind_rose.rs"

[[example]]
name = "polar_calendar"
path = "scientific/polar_calendar.rs"

[[example]]
name = "error_bars"
path = "scientific/error_bars.rs"

# ── planned ─────────────────────────────────────────────────────────────────
# Placeholders for backends and features that land in 0.3.0+. Each writes a
# static PNG announcing the deferred feature so `cargo xtask gallery` always
# emits a uniform output set.

[[example]]
name = "terminal"
path = "planned/terminal.rs"

[[example]]
name = "interactive"
path = "planned/interactive.rs"

[[example]]
name = "surface3d"
path = "planned/surface3d.rs"

[[example]]
name = "streaming"
path = "planned/streaming.rs"

[[example]]
name = "faceting"
path = "planned/faceting.rs"

# ── data integration ─────────────────────────────────────────────────────────
# Polars / ndarray / Arrow data acceptance. Polars lands in 0.3.0; the others
# follow per the roadmap. Feature-gated so the default cargo build is light.

[[example]]
name = "polars_integration"
path = "data/polars_integration.rs"
required-features = ["starsight/polars"]

[lints]
workspace = true
