[package]
name = "starsight-core"
version.workspace = true
edition.workspace = true
description = "core component of starsight"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
tiny-skia.workspace = true
palette.workspace = true
cosmic-text.workspace = true
ab_glyph.workspace = true
svg.workspace = true
image.workspace = true
chromata.workspace = true
prismatica.workspace = true
thiserror.workspace = true

starsight-marks.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true