[package]
name = "starsight-derive"
version.workspace = true
edition.workspace = true
description = "derive component of starsight"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true