[package]
name = "starsight-export"
version.workspace = true
edition.workspace = true
description = "export component of starsight"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
starsight-figure = { path = "../starsight-figure" }

[features]
default = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true