[package]
name = "starsight-figure"
version.workspace = true
edition.workspace = true
description = "figure component of starsight"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
starsight-marks = { path = "../starsight-marks" }
starsight-layout = { path = "../starsight-layout" }

[features]
default = []

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true