[package]
name = "starsight-interact"
version.workspace = true
edition.workspace = true
description = "interact component of starsight"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
starsight-figure = { path = "../starsight-figure", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true