[package]
name = "starsight-layer-1"
version.workspace = true
edition.workspace = true
description = "Layer 1: Rendering abstraction"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
thiserror.workspace = true
tiny-skia.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true