[package]
name = "starsight-layer-3"
version.workspace = true
edition.workspace = true
description = "Layer 3: Marks and stats"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
starsight-layer-1.workspace = true
starsight-layer-2.workspace = true

# No dev-dependencies: layer-3 has no integration tests of its own. Tests
# that exercise marks via the high-level `Figure` API live in
# `starsight-layer-5/tests/snapshot.rs` to avoid a layer-3 → layer-5 → layer-3
# dev-dep cycle that would block `cargo publish`.

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
