[package]
name = "starsight-layer-4"
version.workspace = true
edition.workspace = true
description = "Layer 4: Layout and composition"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
starsight-layer-1.workspace = true
starsight-layer-2.workspace = true
starsight-layer-3.workspace = true

[lints]
workspace = true

# Layer-4 modules (layouts, legends, colorbars, facets) are stubs in 0.2.0;
# the lower-layer dependencies are wired up so concrete implementations can
# land in subsequent releases without a Cargo.toml change.
[package.metadata.cargo-machete]
ignored = ["starsight-layer-1", "starsight-layer-2", "starsight-layer-3"]

[package.metadata.docs.rs]
all-features = true
