[package]
name = "starsight-layer-5"
version.workspace = true
edition.workspace = true
description = "Layer 5: High-level API"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
starsight-layer-1.workspace = true
starsight-layer-2.workspace = true
starsight-layer-3.workspace = true
starsight-layer-4.workspace = true
log = { workspace = true }
polars = { workspace = true, optional = true }

[features]
default = []
polars = ["dep:polars"]

[dev-dependencies]
# Snapshot tests for the full Figure → marks → backend pipeline live here
# (moved from layer-3) so the cycle layer-3 → layer-5 → layer-3 disappears.
insta = { workspace = true }
tempfile = "3"
polars = { workspace = true }

[lints]
workspace = true

# Layer-4 (layouts/legends/colorbars/facets) is a stub in 0.2.0; the dep is
# wired up so layer-5 can pick those types up when implementations land.
[package.metadata.cargo-machete]
ignored = ["starsight-layer-4"]

[package.metadata.docs.rs]
all-features = true
