[package]
name = "starsight-layer-7"
version.workspace = true
edition.workspace = true
description = "Layer 7: Animation and export"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
starsight-layer-1.workspace = true
starsight-layer-2.workspace = true
starsight-layer-3.workspace = true
starsight-layer-4.workspace = true
starsight-layer-5.workspace = true
starsight-layer-6.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
