[package]
name = "starsight-layer-7"
version.workspace = true
edition.workspace = true
description = "Layer 7: Animation and export"
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
starsight-layer-1.workspace = true
starsight-layer-2.workspace = true
starsight-layer-3.workspace = true
starsight-layer-4.workspace = true
starsight-layer-5.workspace = true
starsight-layer-6.workspace = true

[lints]
workspace = true

# Layer-7 modules (animations, exports, gifs, prints, terminals, webs) are
# stubs in 0.2.0; the lower-layer dependencies are wired up so concrete
# implementations can land in subsequent releases without a Cargo.toml change.
[package.metadata.cargo-machete]
ignored = [
  "starsight-layer-1",
  "starsight-layer-2",
  "starsight-layer-3",
  "starsight-layer-4",
  "starsight-layer-5",
  "starsight-layer-6",
]

[package.metadata.docs.rs]
all-features = true
