[package]
name = "starsight"
version.workspace = true
edition.workspace = true
description = "A unified scientific visualization crate for Rust — from zero-config one-liners to GPU-accelerated interactive 3D."
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[dependencies]
starsight-core.workspace = true
starsight-derive.workspace = true
starsight-export.workspace = true
starsight-figure.workspace = true
starsight-gpu = { workspace = true, optional = true }
starsight-interact.workspace = true
starsight-layout.workspace = true
starsight-marks.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = []
full = []
minimal = []
science = []
dashboard = []
terminal = []
web = []
gpu = ["dep:starsight-gpu"]
interactive = []
polars = []
ndarray = []
arrow = []
3d = []
pdf = []
stats = []
contour = []
geo = []
resvg = []