[package]
name = "xtask"
version.workspace = true
edition.workspace = true
description = "xtask for starsight"
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
walkdir = { workspace = true }

[features]

[lints]
workspace = true
