[package]
name = "xtask"
version.workspace = true
edition.workspace = true
description = "xtask for starsight"
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
walkdir = { workspace = true }
# chrome regen
tiny-skia = { workspace = true }
resvg = { workspace = true }
usvg = { workspace = true }
image = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

[features]

[lints]
workspace = true
